--- a/registration.html
+++ b/registration.html
@@ -9,24 +9,16 @@
 <td style="font-size:20pt;"><b><i>Email-Id</i></b></td>
 <td><input type="email" name="email" placeholder="Enter email"></td>
 </tr>
-
 <tr>
-		
 <td style="font-size:20pt;"><b><i>First Name</i></b></td>
-       
- <td><input type="name" name="first name" placeholder="Enter first Name"></td>
+<td><input type="name" name="first name" placeholder="Enter first Name"></td>
 </tr>
-
 <tr>
-		
 <td style="font-size:20pt;"><b><i>Last Name</i></b></td>
-       
- <td><input type="name" name="last name"placeholder="Enter last Name"></td>
+<td><input type="name" name="last name"placeholder="Enter last Name"></td>
 </tr>
-
-
 <tr>
-	<td style="font-size:20pt;"><b><i>Mobile Number</i></b></td>
+<td style="font-size:20pt;"><b><i>Mobile Number</i></b></td>
 <td><input type="number" name="number" placeholder="Enter mobile number"></td>
 </tr>
 <tr>
@@ -35,17 +27,13 @@
   <option value=""></option>
   <option value="weekdays">weekdays</option>
   <option value="weekdays">weekends</option>
-  
 </tr>
 <tr>
 <td style="font-size:20pt;"><b><i>Course</i></b></td>
 <td><select>
 <option value=""></option>
-
 <option value="Java">Java</option>
-
 <option  value="Angular">Angular</option>
-
 <option value="Framework">Framework</option>
 <option value="WebTechnology">WebTechnology</option>
 <option value="Jee">Jee</option>
@@ -81,6 +69,12 @@
 <option value="2020">2020</option>
 <option value="2021">2021</option>
 </select>
+<tr>
+<td><input type="submit" name="submit" value="submit"></td>
+</tr>
+<tr>
+<td><input type="reset" name="reset" value="reset"></td>
+</tr>
 </form>
 </table>
 </body>
